[package]
name = "zero"
version = "0.1.0"
edition = "2021"
authors = ["heru eko susanto <heru.ekos@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.136", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"

[dependencies.mongodb]
version = "2.3.0"
default-features = false
features = ["async-std-runtime"]